[metadata]
name = webcash
version = 0.0.5
author = Bryan Bishop
author_email = kanzure@gmail.com
description = Webcash is an experimental "e-cash" (electronic cash)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kanzure/webcash
project_urls =
    Bug Tracker = https://github.com/kanzure/webcash/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = webcash
python_requires = >=3.6
install_requires =
    requests
    click
    filelock

[options.packages.find]
where = webcash

[options.entry_points]
console_scripts =
    webcash = webcash.walletclient:main
